--- a/apps/maelstorm/android/app/src/main/res/values/styles.xml
+++ b/apps/maelstorm/android/app/src/main/res/values/styles.xml
@@ -6,4 +6,15 @@
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     </style>
 
+    <style name="Splash" parent="Theme.AppCompat.Light.NoActionBar">
+      <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
+
+      <item name="android:textColor">@color/textColor</item>
+      <item name="android:statusBarColor">@color/splashBg</item>
+      <item name="android:windowBackground">@color/splashBg</item>
+
+      <item name="colorPrimaryDark">@color/colorPrimary</item>
+      <item name="colorPrimary">@color/colorPrimary</item>
+      <item name="colorAccent">@color/colorAccent</item>
+    </style>
 </resources>
