--- a/apps/maelstorm/android/app/src/main/res/values/styles.xml
+++ b/apps/maelstorm/android/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
 
       <item name="android:textColor">@color/textColor</item>
       <item name="android:statusBarColor">@color/splashBg</item>
+      <item name="android:statusBarColor">@android:color/transparent</item>
       <item name="android:windowBackground">@color/splashBg</item>
 
       <item name="colorPrimaryDark">@color/colorPrimary</item>
